--- a/app/src/main/res/layout/item_address_book.xml
+++ b/app/src/main/res/layout/item_address_book.xml
@@ -1,47 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/activity_main"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        app:cardMaxElevation="8dp">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="4dp"
+    app:cardMaxElevation="8dp">
 
     <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/key_indicator"
-            style="@style/indicator_icon"/>
+        android:id="@+id/key_indicator"
+        style="@style/indicator_icon"/>
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+        <CheckBox
+            android:id="@+id/address_starred"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/rythm2"
+            android:layout_gravity="center"
+            android:button="@android:drawable/btn_star"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:orientation="vertical"
-            android:layout_gravity="center_vertical">
+            android:padding="@dimen/rythm2">
 
-        <TextView android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:id="@+id/address_name"
-                  android:textSize="16sp"
-                  android:paddingTop="8dp"
-                  android:paddingBottom="16dp"
-                  android:fontFamily="sans-serif"
-                  android:layout_alignParentRight="true"/>
+            <TextView
+                android:id="@+id/address_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:fontFamily="sans-serif"
+                android:paddingBottom="16dp"
+                android:paddingTop="8dp"
+                android:textSize="16sp"
+                tools:text="Name"/>
 
-        <TextView android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:id="@+id/address_note"
-                  android:fontFamily="sans-serif"
-                  android:layout_alignParentRight="true"/>
+            <TextView
+                android:id="@+id/address_note"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:fontFamily="sans-serif"
+                tools:text="Some details about the account"/>
 
-        <TextView android:layout_width="wrap_content"
-                  android:layout_height="wrap_content"
-                  android:id="@+id/address_hash"
-                  android:singleLine="true"
-                  android:ellipsize="middle"
-                  android:fontFamily="sans-serif-condensed"
-                  android:layout_alignParentRight="true"/>
+            <TextView
+                android:id="@+id/address_hash"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:ellipsize="middle"
+                android:fontFamily="sans-serif-condensed"
+                android:singleLine="true"
+                tools:text="0x12345"/>
 
+        </LinearLayout>
     </LinearLayout>
 
 
